features/landing/features/home/organisms/Experts/components/Photos/Photos.css
.photos {
  display: grid;
  flex-basis: 50%;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 32px;
  justify-items: center;

  @media (--mediumDown) {
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 16px;
  }

  @media (--smallDown) {
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 16px;
    margin: 0 auto;
    width: 100%;
  }
}

.photoWrap {
  position: relative;
  width: 100%;
  height: 100%;

  @media (--mediumDown) {
    &:after {
      content: '';
      display: block;
      padding-bottom: 100%;
    }
  }
}

.photo {
  width: 100%;
  width: 128px;
  height: 128px;
  border-radius: 50%;
  object-fit: cover;

  @media (--mediumDown) {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    grid-gap: 16px;
    align-self: baseline;
    min-height: 100px;
  }

  @media (--smallDown) {
    grid-gap: 16px;
    align-self: baseline;
    width: 100%;
    min-height: 80px;
  }
}

